# who-aids-prop

./: .readthedocs.yaml  CHECK_IF_DIFFERENCE  CMakeLists.txt  DEFINES  Doxyfile  PRE-REQUISITES.md  README.md  build_from_source.sh  builddist.sh  hello.cu  install-R.sh  matrix_multiplication_cpu.cpp  matrix_multiplication_gpu.cu  run.sh  seed 1interventionconfig_14.txt  seed 1interventionconfig_16.txt  seed 1interventionconfig_17.txt  seed 1interventionconfig_18.txt  seed 1interventionconfig_3.txt  seed 1interventionconfig_4.txt  seed 1interventionconfig_6.txt  seed 1interventionconfig_7.txt  system_requirements.txt  test_config.txt  test_config1.txt
buildscripts/: README  build-debian.py  build-fedora.py  build-linuxpacks-using-vagrant.py  build-osx.py  build-windows.py  common.py
cmake/: FindGSL.cmake  FindRT.cmake  Macros.cmake  SimpactMacros.cmake  embedfile.c
data/: maxart-facilities.csv  maxart-randomization-fake_1.csv  maxart-randomization-fake_2.csv  maxart-randomization-fake_4.csv  sa_2003adjusted.csv  sa_2013.csv  sa_2013adjusted.csv  sa_fertility.csv
dox/: mainpage.h  simpact.css  simpactcyan.h
markdowndoc/: agegap_hazard_examples.ipynb  agegapry_hazard_funnel.ipynb  aidsmortalityexample.ipynb  discretedistribution.ipynb  form_diss_debut_mort_concep_birth.txt  formationhazard.tex  formationhazard_agegap.tex  hazard_tmax.aux  hazard_tmax.out  index.html  markdown2.py  maxart-facilitysteps.ipynb  maxart-popdens.ipynb  maxart-randomization-fake_3.csv  maxart.md  mnrm.aux  mnrm.tex  poisson.aux  poisson.out  poisson.tex  simpact_cyan.md  up32.tiff
(+425 files in other folders)
